k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: waveflix
  labels:
    name: waveflix
    environment: production
